--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,22 @@ environment:
 
 dependencies:
   adaptive_screen_utils: ^2.4.0
+  build_runner: ^2.4.15
   cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
   fluttertoast: ^8.2.12
+  freezed: ^3.0.3
+  get_it: ^8.0.3
+  json_annotation: ^4.9.0
+  json_serializable: ^6.9.4
+  pretty_dio_logger: ^1.4.0
+  retrofit: ^4.4.2
   shared_preferences: ^2.5.2
 
 dev_dependencies:
