--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   get_it: ^8.0.3
   json_annotation: ^4.9.0
   json_serializable: ^6.9.4
+  pin_code_fields: ^8.0.1
   pretty_dio_logger: ^1.4.0
   retrofit: ^4.4.2
   shared_preferences: ^2.5.2
