--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   fluttertoast: ^8.2.12
   freezed: ^3.0.3
   get_it: ^8.0.3
+  intl: ^0.20.2
   json_annotation: ^4.9.0
   json_serializable: ^6.9.4
   pin_code_fields: ^8.0.1
