--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
 
 dependencies:
   adaptive_screen_utils: ^2.4.0
-  build_runner: ^2.4.15
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
@@ -17,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
   fluttertoast: ^8.2.12
@@ -31,9 +31,11 @@ dependencies:
   shared_preferences: ^2.5.2
 
 dev_dependencies:
+  build_runner: ^2.4.15
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  retrofit_generator: '>=8.0.0 <10.0.0' # for Dart 3.3 use ^9.0.0
 
 flutter:
   uses-material-design: true
