--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <application
         android:label="turn_digital"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" 
+    android:exported="false"/>
+<receiver android:name="com.dexterous.flutterlocalnotifications.ActionBroadcastReceiver"
+    android:exported="false"/>
+<receiver android:name="com.dexterous.flutterlocalnotifications.NotificationBroadcastReceiver"
+    android:exported="false"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
