--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_local_notifications: ^18.0.1
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
@@ -25,10 +26,14 @@ dependencies:
   intl: ^0.20.2
   json_annotation: ^4.9.0
   json_serializable: ^6.9.4
+  path_provider: ^2.1.5
+  permission_handler: ^11.4.0
   pin_code_fields: ^8.0.1
   pretty_dio_logger: ^1.4.0
   retrofit: ^4.4.2
+  share_plus: ^10.1.4
   shared_preferences: ^2.5.2
+  timezone: ^0.10.0
 
 dev_dependencies:
   build_runner: ^2.4.15
