--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   fluttertoast: ^8.2.12
   freezed: ^3.0.3
   get_it: ^8.0.3
+  hive: ^2.2.3
   intl: ^0.20.2
   json_annotation: ^4.9.0
   json_serializable: ^6.9.4
@@ -33,6 +34,7 @@ dependencies:
   retrofit: ^4.4.2
   share_plus: ^10.1.4
   shared_preferences: ^2.5.2
+  smooth_page_indicator: ^1.2.1
   timezone: ^0.10.0
 
 dev_dependencies:
