--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   adaptive_screen_utils: ^2.4.0
+  bloc: ^9.0.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
@@ -22,6 +23,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   fluttertoast: ^8.2.12
   freezed: ^3.0.3
+  freezed_annotation: ^3.0.0
   get_it: ^8.0.3
   hive: ^2.2.3
   intl: ^0.20.2
