--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   intl: ^0.20.2
   json_annotation: ^4.9.0
   json_serializable: ^6.9.4
+  mockito: ^5.4.5
   path_provider: ^2.1.5
   permission_handler: ^11.4.0
   pin_code_fields: ^8.0.1
